<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Spoof Beta</string>
    <string name="footer_made_by">Copyright iSlavik (@islavikfx). Beta April 2026.</string>
    <string name="footer_open_source">Open Source (Build v1.0.0).</string>
    <string name="action_apply">APPLY</string>
    <string name="action_ok">OK</string>
    <string name="action_edit">EDIT</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="later">Later</string>
    <string name="force_stop">Force Stop</string>
    <string name="shutdown">Shut Down</string>
    <string name="clear_data">Clear Data</string>
    <string name="delete_app">Delete App</string>
    <string name="no_root_access">No ROOT access.</string>
    <string name="not_found">Not found.</string>
    <string name="error">Error.</string>
    <string name="unknown">Unknown</string>
    <string name="working">Working…</string>
    <string name="rebooting">Rebooting…</string>
    <string name="android_id_updated">Android ID updated.</string>
    <string name="ad_id_updated">AD ID updated.</string>
    <string name="mac_updated">MAC updated.</string>
    <string name="app_data_cleared">%s data cleared.</string>
    <string name="loading_apps">Loading apps. Please wait…</string>
    <string name="reboot_question">Do you want to reboot now?</string>
    <string name="reboot_now">Reboot Now</string>
    <string name="type_here">Type here…</string>
    <string name="search_apps">Search apps…</string>
    <string name="search_props">Search for props…</string>
    <string name="enter_new_value">Enter new value…</string>
    <string name="advertising_id_settings">Advertising ID Settings</string>
    <string name="no_google_services">No Google Services Found</string>
    <string name="reset_ad_id">Reset Advertising ID</string>
    <string name="check_force_stop">Force stop and restart Google Framework</string>
    <string name="check_clear_data_full">Clear whole Google Framework data</string>
    <string name="check_reset_advertising_id">Reset Advertising ID</string>
    <string name="current_id_placeholder">Current ID: %s</string>
    <string name="warning_id_reset">⚠️ WARNING! Even after you reset your ID, some apps may still remember and store your IDs. Reset all data or reinstall the app in which you want to hide your ID after this action.</string>
    <string name="warning_id_reset_title">⚠️ Warning</string>
    <string name="reset_android_id">Reset Android ID</string>
    <string name="reboot_after_apply">Reboot after apply</string>
    <string name="reset_android_id_com">Reset Android ID (com.android)</string>
    <string name="reset_android_id_settings">Reset Android ID (settings packages)</string>
    <string name="current_id_com_android">Current ID (com.android): %s</string>
    <string name="current_id_settings">Current ID (settings): %s</string>
    <string name="hide_mac">Hide MAC Address</string>
    <string name="mac_address_changer">MAC Address Changer</string>
    <string name="randomize_wifi_mac">Randomize Wi-Fi (WLAN) MAC Address</string>
    <string name="warning_mac_reset">⚠️ WARNING! Randomized MAC for WLAN will work until reboot. MAC changer for phone (IMEI, MEID, Bluetooth, etc.) was not added because of the risk of bricking the device, as it is stored in NVRAM.</string>
    <string name="warning_mac_reset_title">⚠️ Warning</string>
    <string name="wifi_disabled">Wi-Fi is disabled. Please enable Wi-Fi first.</string>
    <string name="current_mac">Current MAC: %s</string>
    <string name="hide_props">Hide Device Props</string>
    <string name="warning_props">⚠️ ATTENTION! Please do not touch props like (dalvik.vm*, vendor.ril*, gsm*, ro.boot*, sys.boot*, dev.mnt*, etc.) to avoid getting a brick. Edit only safe props like (ro.product.model, ro.product.name, ro.product.manufacturer, ro.product.build.fingerprint, etc.) to hide your phone name from apps. My app can protect you if you try to edit some system-critical props, or a Magisk module after some reboots (stuck on the Android loading screen) can disable the module, but this still does not give any guarantee. Be careful.</string>
    <string name="warning_props_reboot">⚠️ WARNING! Custom props will work only after reboot.</string>
    <string name="warning_props_title">⚠️ Warning</string>
    <string name="selected_prop">Selected prop: %s</string>
    <string name="current_value">Current value: %s</string>
    <string name="configure_device_apps">Configure Device Apps</string>
    <string name="attention">⚠️ ATTENTION</string>
    <string name="warning_apps">⚠️ ATTENTION! Please do not touch system apps (e.g., NFC, Software Update, Payment Framework, Android System, etc.) to avoid bricking your device. Delete only safe apps (e.g., Google Framework, Play Store, Facebook, Samsung Account, etc.).</string>
    <string name="warning_app_delete">⚠️ WARNING! Deleting an app will remove it permanently. System apps may cause boot loops if removed.</string>
    <string name="app_size">Size: %s</string>
    <string name="app_size_na">Size: N/A</string>
    <string name="app_path">Directory: %s</string>
    <string name="app_perms">Permissions (%d): %s</string>
    <string name="app_perms_na">Permissions: N/A</string>
    <string name="app_removed_msg">%s\n%s\nremoved.</string>
    <string name="settings_title">Settings</string>
    <string name="select_theme">Select Theme:</string>
    <string name="clear_system_logs_dalvik_reboot">Clear system logs &amp; dalvik-cache and Reboot</string>
    <string name="reboot_device">Reboot</string>
    <string name="connect_tor_vpn">Connect TOR Network</string>
    <string name="tor_coming_soon_desc">TOR integration is under development. I have no time to finish this in beta, sorry.</string>
    <string name="desc_back">Back</string>
    <string name="desc_settings_menu">Settings Menu</string>
    <string name="desc_app_icon">App Icon</string>
</resources>